--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ markdown: kramdown
 extensions: [fenced_code_blocks]
 excerpt_separator: "<!--more-->"
 url: https://takagotch.github.io/page116/
-baseurl: "/takagotch.github.io"
+baseurl: ""
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
