--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ highlighter: null
 markdown: kramdown
 extensions: [fenced_code_blocks]
 excerpt_separator: "<!--more-->"
-url: https://takagotch.github.io
-baseurl: "/page116"
+url: 
+baseurl: "https://takagotch.github.io/page116"
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
