--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,6 @@ extensions: [fenced_code_blocks]
 excerpt_separator: "<!--more-->"
 url: 
 baseurl: "https://takagotch.github.io/page116"
-bathpath:  https://takagotch.github.io/page116"
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
@@ -76,7 +75,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : https://takagotch.github.io
+  BASE_PATH :  https://takagotch.github.io/page116
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
@@ -86,7 +85,7 @@ JB :
   #   http://s3.amazonaws.com/yoursite/themes/watermelon
   #   /assets
   #
-  ASSET_PATH : https://heliumjk.github.io/assets/themes/bootstrap
+  ASSET_PATH : https://takagotch.github.io/page116/assets/themes/bootstrap
 
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
